--- a/templates/grondboringen-ap.j2
+++ b/templates/grondboringen-ap.j2
@@ -1,5 +1,10 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>TO DO</p>
+<p>Het applicatieprofiel Grondboringen legt uit hoe de terminologie in dit domein moet gebruiklt worden om gegevens uit te wisselen over het boren in de grond of meer algemeen het bemonsteren van de grond.</p>
+>Het applicatieprofiel bouwt oa verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sensoren-en-bemonstering">het applicatieprofiel OSLO Sensoren en Bemonstering</a>.
+<p>Dit deeldomein heeft betrekking op de activiteit vh Boren in Bodem & Ondergrond. Doel ervan is typisch het verticaal samplen van Bodem & Ondergrond met het oog op het vaststellen van veranderingen met de diepte qua gelaagdheid, lithologie etc. </p>
+<p>Dit gebeurt door het analyseren van Grondmonsters of het uitvoeren van Observaties op verschillende dieptes. </p>
+<p>Het verkregen Boorgat laat ook toe om toestellen te hosten voor meer permanente monitoring of voor exploitatie. </p>
+<p>Boren is een gespecialiseerde activiteit die doorgaans plaatsvindt binnen een WettelijkKader en met bijzonder materieel en personeel.</p>
 {% endblock %}
