--- a/templates/observaties-en-metingen-ap.j2
+++ b/templates/observaties-en-metingen-ap.j2
@@ -1,7 +1,7 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Observaties en Metingen legt uit hoe de terminologie in dit domein moet gebruiklt worden om gegevens uit te wisselen over Observaties in het algemeen en Metingen (en andere gespecialiseerde Observaties) in het bijzonder.</p>
+<p>Het applicatieprofiel Observaties en Metingen legt uit hoe de terminologie in dit domein moet gebruikt worden om gegevens uit te wisselen over Observaties in het algemeen en Metingen (en andere gespecialiseerde Observaties) in het bijzonder.</p>
 <p>Dit applicatieprofiel is gebaseerd op <a href="https://www.iso.org/standard/32574.html">ISO 19156:2011</a>. Het bouwt ook verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/ruimtelijke-bereiken">het applicatieprofiel OSLO Ruimtelijke Bereiken</a>.</p>
 <p>Observaties worden beschouwd als de activiteit  waarbij de waarde ve Kenmerk ve Object wordt vastgesteld.</p>
 <p>Meestal is het niet mogelijk om het Object waarin men werkelijk geïnteresseerd is te observeren en observeert men daarom een deel ervan (het Bemonsteringsobject). Dat deel is een representatieve plek (RuimtelijkBemonsteringsobject vh type Punt, Lijn, Vlak, Solid) of een representatief Monster.</p>
