--- a/templates/bo-observaties-ap.j2
+++ b/templates/bo-observaties-ap.j2
@@ -4,5 +4,5 @@
 <p>Het applicatieprofiel Bodem & Ondergrond Observaties legt uit hoe de terminologie in dit domein moet gebruikt worden om gegevens over gespecialiseerde Observaties mbt Bodem & Ondergrond uit te wisselen.</p>
 <p>Het applicatieprofiel bouwt oa verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sensoren-en-bemonstering">het applicatieprofiel OSLO Sensoren en Bemonstering</a>.
 <p>Veel Observaties vinden plaats op Monsters verkregen door het Boren in Bodem & Ondergrond. Deze Monsters zijn representatief voor de aard van B&O op een bepaalde diepte met kenmerken zoals zoals Consistentie, Korrelverdeling, Doorlatendheid etc. </p>
-<pEen groot aantal Observaties kan generiek worden beschreven, andere (of bepaalde uitvoeringen ervan) zijn gespecialiseerd.</p>
+<p>Een groot aantal Observaties kan generiek worden beschreven, andere (of bepaalde uitvoeringen ervan) zijn gespecialiseerd.</p>
 {% endblock %}
