--- a/templates/bodem-ap.j2
+++ b/templates/bodem-ap.j2
@@ -1,5 +1,11 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>TO DO</p>
+<p>Het applicatieprofiel Bodem legt uit hoe de terminologie in dit domein moet gebruikt worden om gegevens over uit te wisselen over bodemobservaties.</p>
+<p>Het applicatieprofiel bouwt oa verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sensoren-en-bemonstering">het applicatieprofiel OSLO Sensoren en Bemonstering</a>.
+<p>Dit deeldomein heeft betrekking op het bemonsteren en observeren van de Bodem. </p>
+<p>Bemonstering gebeurt op Bodemlocaties (soms verder gespecialiseerd als Bodemboorgat of Profielput).</p>
+<p>Naast analyses van Bodemmonsters wordt het Bodemprofiel bepaald en wordt tevens de bodem als geheel geclassificeerd volgens diverse bodemclassificatiesystemen. </p>
+<p>Het Profiel van een bodem als resultaat van een Observatie (van BodemkundigeOpbouw) bestaat uit Horizonten en Lagen die eveneens apart kunnen worden bemonsterd of geobserveerd. </p>
+<p>Ook in dit domein zijn er Observaties die generiek kunnen worden beschreven. </p>
 {% endblock %}
