--- a/templates/sonderingen-ap.j2
+++ b/templates/sonderingen-ap.j2
@@ -1,5 +1,9 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>TO DO</p>
+<p>Het applicatieprofiel Grondwatermeetnet legt uit hoe de terminologie in dit domein moet gebruikt worden om gegevens over uit te wisselen over Observaties uitgevoerd dmv Sondering.</p>
+<p>Het applicatieprofiel bouwt oa verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sensoren-en-bemonstering">het applicatieprofiel OSLO Sensoren en Bemonstering</a>.
+<p>Onder Sondering verstaan we het verticaal samplen van Bodem en Ondergrond door het inbrengen van een Sonde in de grond.   </p>
+<p>Die Sonde meet de variatie met de diepte van bepaalde kenmerken van bodem en ondergrond zoals gelaagdheid, draagvermogen, vervuiling etc. </p>
+<p>De specialisaties in dit applicatieprofiel richten zich vooral op een bepaald type Sondering: varianten van de Cone Penetration Test (CPT) of het in de grond drijven van een conus waarbij onderweg indirect of direct bepaalde kenmerken van bodem & ondergrond kunnen worden achterhaald  </p>
 {% endblock %}
