--- a/templates/sensoren-en-bemonstering-voc.j2
+++ b/templates/sensoren-en-bemonstering-voc.j2
@@ -1,5 +1,6 @@
 {% extends "voc2.j2" %}
 
 {% block summary %}
-<p>Vul hier een samenvatting van mijn vocabularium in.</p>
+<p>Het vocabularium Sensoren en Bemonstering bevat de terminologie nodig om de waarnemingsinstrumenten waarmee Observaties worden uitgevoerd te beschrijven en ook om de activiteit van het nemen van representatieve ruimtelijke of fysieke stalen te documenteren.</p>
+<p>Het grootste deel is externe terminologie gebaseerd op de <a href=https://www.w3.org/TR/vocab-ssn/>W3C SSN Ontologie</a> en <a href=https://www.w3.org/TR/vocab-ssn-ext/>extensies.</a> Deze bouwen verder op terminologie uit <a href=https://www.iso.org/standard/32574.html>ISO 19156:2011 Observations & Measurements</a>. Verder werd een klasse herbruikt uit de <a href=https://saref.etsi.org/core/v3.1.1/>SAREF Ontology</a> om Toestellen te beschrijven.</p>
 {% endblock %}
