--- a/templates/sensoren-en-bemonstering-ap.j2
+++ b/templates/sensoren-en-bemonstering-ap.j2
@@ -1,7 +1,7 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Sensoren en Bemonstering legt uit hoe de terminologie in dit domein moet gebruikt worden om gegevens uit te wisselen over Sensoren (of waarnemingsinstrumenten in het algemeen) en over de activiteit van het Bemonsteren.</p>
+<p>Het applicatieprofiel Sensoren en Bemonstering legt uit hoe de <a href="https://data.vlaanderen.be/ns/sensoren-en-bemonstering#">terminologie</a> moet gebruikt worden om gegevens uit te wisselen over waarnemingsinstrumenten waarmee Observaties worden uitgevoerd en over de activiteit van het bekomen van representatieve ruimtelijke of fysieke stalen.</p
 <p>Dit applicatieprofiel is gebaseerd op <a href="https://www.w3.org/TR/vocab-ssn/">de W3C SSN ontologie</a> en zijn <a href="https://www.w3.org/TR/vocab-ssn-ext/">extensies</a>. Het bouwt ook verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/observaties-en-metingen">het applicatieprofiel OSLO Observaties en Metingen</a>.
 <p>Observatie wordt overgenomen van Observaties & Metingen met zijn kenmerken maar Proces (dit is de gebruikteProcedure bij een Observatie) wordt opgesplitst in Sensor (het instrument waarmee de waarneming gebeurt) en Observatieprocedure (de methode waarmee de Observatie gebeurt).</p>
 <p>Bemonsteringsobjecten (locatie en Monster) zijn er ook nog maar zijn nu het resultaat van een Bemonstering(sactiviteit), net als Observatie (dat ook een activiteit is) met een Bemonsteraar (het instrument waarmee de Bemonstering gebeurt) en een bemonsteringsProcedure (de methode die gevolgd wordt bij het Bemonsteren).</p>
