--- a/templates/observaties-en-metingen-voc.j2
+++ b/templates/observaties-en-metingen-voc.j2
@@ -1,5 +1,6 @@
 {% extends "voc2.j2" %}
 
 {% block summary %}
-<p>Vul hier een samenvatting van mijn vocabularium in.</p>
+<p>Het vocabularium Observaties en Metingen bevat de terminologie nodig om Observaties te beschrijven.</p>
+<p>Het grootste deel is externe terminologie gebaseerd op <a href=https://www.iso.org/standard/32574.html>ISO 19156:2011 Observations & Measurements</a>.</p>
 {% endblock %}
