--- a/templates/bodem-en-ondergrond-ap.j2
+++ b/templates/bodem-en-ondergrond-ap.j2
@@ -1,7 +1,7 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Bodem en Ondergrond legt uit hoe de terminologie moet gebruikt worden die bijkomend is voorzien om Observaties uit te wisselen specifiek voor het domein Bodem en Ondergrond (maar nog generiek genoeg om bruikbaar te zijn voor andere deeldomeinen van Bodem en Ondergrond).</p>
+<p>Het applicatieprofiel Bodem en Ondergrond legt uit hoe de <a href="https://data.vlaanderen.be/ns/bodem-en-ondergrond">terminologie</a> moet gebruikt worden die bijkomend is voorzien om Observaties uit te wisselen specifiek voor het domein Bodem en Ondergrond (maar nog generiek genoeg om bruikbaar te zijn voor andere deeldomeinen van Bodem en Ondergrond).</p>
 <p>Het gaat daarbij bvb over BO_RuimtelijkBemonsteringsobject dat aan RuimtelijkBemonsteringsobject uit <a href=”https://data.vlaanderen.be/doc/applicatieprofiel/observaties-en-metingen”>Observaties en Metingen</a> nog attributen toevoegt als maaiveld en diepte.</p>
 <p>Ook voor het domein Bodem en Ondergrond werd het RuimtelijkBemonsteringsobject Profiel uit Observaties en Metingen uitgebreid met Profielelementen met de bedoeling onderdelen van Profielen zoals Lagen beter te kunnen beschrijven.</p>
 <p>Naast Bereiken die variaties van fenomenen in ruimte en tijd kunnen documenteren was er in het domein Bodem en Ondergrond ook behoefte aan “gewone” meetreeksen, waar het fenomeen functie kan zijn van een willekeurige parameter. Om die reden voegden we Meetreeksen toe en de veelgebruikte specialisatie Fractiemeting.</p>
