--- a/templates/bodem-en-ondergrond-voc.j2
+++ b/templates/bodem-en-ondergrond-voc.j2
@@ -1,7 +1,7 @@
 {% extends "voc2.j2" %}
 
 {% block summary %}
-<p>Het vocabularium Bodem en Ondergrond voegt terminologie toe aan de vocabularia <a href=”https://data.vlaanderen.be/ns/observaties-en-metingen”>Observaties en Metingen</a> en <a href=” https://data.vlaanderen.be/ns/sensoren-en-bemonstering”>Sensoren en Bemonstering</a> specifiek bruikbaar voor het domein Bodem en Ondergrond.</p>
+<p>Het vocabularium Bodem en Ondergrond voegt terminologie toe aan de vocabularia <a href="https://data.vlaanderen.be/ns/observaties-en-metingen">Observaties en Metingen</a> en <a href="https://data.vlaanderen.be/ns/sensoren-en-bemonstering">Sensoren en Bemonstering</a> specifiek bruikbaar voor het domein Bodem en Ondergrond.</p>
 <p>De termen zijn generiek generiek genoeg om bruikbaar te zijn voor meerdere deeldomeinen binnen Bodem & Ondergrond.</p>
 <p>Het gaat over termen zoals Diepte, Maaiveld of een uitbreiding van Profiel uit Observaties en Metingen met Profielelement en Laag als specialisatie daarvan.</p>
 <p>Ook Meetreeks en Fractiemeting als specialisatie daarvan zijn toegevoegd als aanvulling op DiscreteBereiken uit Observaties en Metingen. Deze laatste beperken zich tot variaties van een fenomeen in tijd en ruimte terwijl in dit domein ook variaties in functie van andere parameters beschreven moeten kunnen worden.</p>
