--- a/templates/grondboringen-ap.j2
+++ b/templates/grondboringen-ap.j2
@@ -1,7 +1,7 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Grondboringen legt uit hoe de terminologie in dit domein moet gebruikt worden om gegevens uit te wisselen over het boren in de grond of meer algemeen het bemonsteren van de grond.</p>
+<p>Het applicatieprofiel Grondboringen legt uit hoe de <a href="https://data.vlaanderen.be/ns/grondboringen/">terminologie</a> in dit domein moet gebruikt worden om gegevens uit te wisselen over het boren in de grond of meer algemeen het bemonsteren van de grond.</p>
 <p>Het applicatieprofiel bouwt oa verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sensoren-en-bemonstering">het applicatieprofiel OSLO Sensoren en Bemonstering</a>.
 <p>Dit deeldomein heeft betrekking op de activiteit vh Boren in Bodem & Ondergrond. Doel ervan is typisch het verticaal samplen van Bodem & Ondergrond met het oog op het vaststellen van veranderingen met de diepte qua gelaagdheid, lithologie etc. </p>
 <p>Dit gebeurt door het analyseren van Grondmonsters of het uitvoeren van Observaties op verschillende dieptes. </p>
