--- a/templates/bo-interpretaties-ap.j2
+++ b/templates/bo-interpretaties-ap.j2
@@ -1,8 +1,8 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Bodem & Ondergrond Interpretaties legt uit hoe de terminologie in dit domein moet gebruikt worden om gegevens over gespecialiseerde Observaties (vh type Interpretatie) mbt Bodem & Ondergrond uit te wisselen.</p>
+<p>Het applicatieprofiel Bodem & Ondergrond Interpretaties legt uit hoe de terminologie uit het overeenkomstig <a href="https://data.vlaanderen.be/ns/bodem-en-ondergrond/interpretaties/">vocabularium</a< moet gebruikt worden om gegevens over gespecialiseerde Observaties (vh type Interpretatie) mbt Bodem & Ondergrond uit te wisselen.</p>
 <p>Het applicatieprofiel bouwt oa verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering">het applicatieprofiel OSLO Sensoren en Bemonstering</a>.</p>
-<p>Observaties zoals deze vermeld bij <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/bo-observaties">het applicatieprofiel OSLO Bodem & Ondergrond Observaties</a> (maar ook deze vernoemd bij <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sonderingen">het applicatieprofiel OSLO Sonderingen</a>) vormen doorgaans input voor verdere Interpretaties over gelaagdheid, lithologie etc en de variatie daarvan met de diepte. </p>
+<p>Observaties zoals deze vermeld bij <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/observaties">het applicatieprofiel OSLO Bodem & Ondergrond Observaties</a> (maar ook deze vernoemd bij <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sonderingen">het applicatieprofiel OSLO Sonderingen</a>) vormen doorgaans input voor verdere Interpretaties over gelaagdheid, lithologie etc en de variatie daarvan met de diepte. </p>
 <p>Dergelijke Observaties noemen we Interpretaties omdat het doorgaans een persoonlijk maar beredeneerd oordeel over de betekenis van de oorspronkelijke Observaties betreft. Het blijven echter Observaties, alleen kregen ze extra betekenis omdat er meer theorie en/of verwerking aan te pas kwam.</p>
 {% endblock %}
