--- a/templates/bo-interpretaties-ap.j2
+++ b/templates/bo-interpretaties-ap.j2
@@ -1,8 +1,12 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Bodem & Ondergrond Interpretaties legt uit hoe de terminologie uit het overeenkomstig <a href="https://data.vlaanderen.be/ns/bodem-en-ondergrond/interpretaties/">vocabularium</a> moet gebruikt worden om gegevens over gespecialiseerde Observaties (vh type Interpretatie) mbt Bodem & Ondergrond uit te wisselen.</p>
-<p>Het applicatieprofiel bouwt oa verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering">het applicatieprofiel OSLO Sensoren en Bemonstering</a>.</p>
-<p>Observaties zoals deze vermeld bij <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/observaties">het applicatieprofiel OSLO Bodem & Ondergrond Observaties</a> (maar ook deze vernoemd bij <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sonderingen">het applicatieprofiel OSLO Sonderingen</a>) vormen doorgaans input voor verdere Interpretaties over gelaagdheid, lithologie etc en de variatie daarvan met de diepte. </p>
-<p>Dergelijke Observaties noemen we Interpretaties omdat het doorgaans een persoonlijk maar beredeneerd oordeel over de betekenis van de oorspronkelijke Observaties betreft. Het blijven echter Observaties, alleen kregen ze extra betekenis omdat er meer theorie en/of verwerking aan te pas kwam.</p>
+<p>Het applicatieprofiel OSLO Bodem & Ondergrond Interpretaties legt uit hoe de terminologie uit het overeenkomstig <a href="https://data.vlaanderen.be/ns/bodem-en-ondergrond/interpretaties/">vocabularium</a> moet gebruikt worden om gegevens over gespecialiseerde Observaties vh type Interpretatie mbt Bodem & Ondergrond uit te wisselen.</p>
+<p>Het applicatieprofiel bouwt oa verder op het applicatieprofiel <a href="https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering">OSLO Sensoren en Bemonstering</.a>. </p>
+<p>Interpretaties zijn Observaties waarbij een persoonlijk of beredeneerd oordeel te pas komt. Dat oordeel is gebaseerd op theoretische kennis en/of verwerking van andere Observaties. </p>
+<p>In de context van Bodem en Ondergrond gaat het typisch om Observaties over de gelaagdheid: stratigrafische of lithologische kenmerken van de lagen of antropogene of geotechnische lagen die men kan onderscheiden. </p>
+<p>Hoe deze lagen variëren met de diepte wordt beschreven dmv RuimtelijkeBereiken, ttz per laag een geometrie (diepte van-tot) en een waarde met de kenmerken van de laag. </p>
+<p>Deze kenmerken hangen af van het soort laag. Het gaat bvb over de grondsoort, de geologische formatie, de watervoering etc. Ze worden doorgaans beschreven, dmv waarden uit een codelijst. </p>
+<p>De input voor de Interpretaties kunnen zoals gezegd andere Observaties zijn, bvb generieke Observaties beschreven met het applicatieprofiel Sensoren en Bemonstering, of meer specifieke zoals deze uit het applicatieprofiel <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/observaties">OSLO Bodem en Ondergrond Observaties</a> of uit het applicatieprofiel <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/sonderingen">OSLO Sonderingen</a>. </p>
+<p>De klassen Observatieprocedure en Input kunnen gebruikt worden om naar deze andere Observaties te verwijzen. </p>
 {% endblock %}
