--- a/templates/bo-interpretaties-ap.j2
+++ b/templates/bo-interpretaties-ap.j2
@@ -2,7 +2,7 @@
 
 {% block summary %}
 <p>Het applicatieprofiel OSLO Bodem & Ondergrond Interpretaties legt uit hoe de terminologie uit het overeenkomstig <a href="https://data.vlaanderen.be/ns/bodem-en-ondergrond/interpretaties/">vocabularium</a> moet gebruikt worden om gegevens over gespecialiseerde Observaties vh type Interpretatie mbt Bodem & Ondergrond uit te wisselen.</p>
-<p>Het applicatieprofiel bouwt oa verder op het applicatieprofiel <a href="https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering">OSLO Sensoren en Bemonstering</.a>. </p>
+<p>Het applicatieprofiel bouwt oa verder op het applicatieprofiel <a href="https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering">OSLO Sensoren en Bemonstering</a>. </p>
 <p>Interpretaties zijn Observaties waarbij een persoonlijk of beredeneerd oordeel te pas komt. Dat oordeel is gebaseerd op theoretische kennis en/of verwerking van andere Observaties. </p>
 <p>In de context van Bodem en Ondergrond gaat het typisch om Observaties over de gelaagdheid: stratigrafische of lithologische kenmerken van de lagen of antropogene of geotechnische lagen die men kan onderscheiden. </p>
 <p>Hoe deze lagen variëren met de diepte wordt beschreven dmv RuimtelijkeBereiken, ttz per laag een geometrie (diepte van-tot) en een waarde met de kenmerken van de laag. </p>
