--- a/templates/bo-observaties-ap.j2
+++ b/templates/bo-observaties-ap.j2
@@ -1,8 +1,11 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Bodem & Ondergrond Observaties legt uit hoe de terminologie in dit domein moet gebruikt worden om gegevens over gespecialiseerde Observaties mbt Bodem & Ondergrond uit te wisselen.</p>
-<p>Het applicatieprofiel bouwt oa verder op <a href="https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering">het applicatieprofiel OSLO Sensoren en Bemonstering</a>.
-<p>Veel Observaties vinden plaats op Monsters verkregen door het Boren in Bodem & Ondergrond. Deze Monsters zijn representatief voor de aard van B&O op een bepaalde diepte met kenmerken zoals zoals Consistentie, Korrelverdeling, Doorlatendheid etc. </p>
-<p>Een groot aantal Observaties kan generiek worden beschreven, andere (of bepaalde uitvoeringen ervan) zijn gespecialiseerd.</p>
+</p>Het applicatieprofiel Bodem & Ondergrond Observaties legt uit hoe de terminologie uit het overeenkomstig vocabularium moet gebruikt worden om gegevens over gespecialiseerde Observaties mbt Bodem & Ondergrond uit te wisselen. </p>
+</p>Het applicatieprofiel bouwt oa verder op het applicatieprofiel OSLO Sensoren en Bemonstering. </p>
+</p>Voor Observaties die generiek zijn, bvb deze van de zgn onderkenning (Grondsoort, Humusgehalte, Volumemassa etc) volstaan de klassen van Sensoren en Bemonstering. </p>
+</p>Dat is niet het geval voor de Observaties in dit applicatieprofiel die doorgaans in een labo plaatsvinden met gespecialiseerde apparatuur: het bepalen van de Korrelverdeling of van geotechnische kenmerken zoals de Doorlatendheid, Samendrukbaarheid of Schuifweerstand. </p>
+</p>Voor deze analyses zijn de nodige klassen en kenmerken voorzien, meestal specialisaties van de klasse Meetreeks omdat het resultaat varieert met een bepaalde parameter, bvb het aandeel van een bepaalde korreldiameter in een grondmonster of de vervorming  van een monster bij toenemende druk. </p>
+</p>De analyses hebben doorgaans betrekking op Grondmonsters, echter voor de beschrijving daarvan verwijzen we naar het applicatieprofiel Grondboringen. </p>
+</p>Het gaat in dit applicatieprofiel niet om Interpretaties, ttz Observaties die een beredeneerd persoonlijk oordeel inhouden, die worden behandeld in het applicatieprofiel OSLO Bodem en Ondergrond Interpretaties. </p>
 {% endblock %}
