--- a/templates/bo-interpretaties-voc.j2
+++ b/templates/bo-interpretaties-voc.j2
@@ -4,5 +4,5 @@
 <p>Het vocabularium Bodem & Ondergrond Interpretaties omvat termen om Observaties mbt Bodem en Ondergrond vh type Interpretatie te beschrijven.</p>
 <p>Het gaat daarbij hoofdzakelijk om Observaties die de gelaagdheid van de ondergrond beschrijven, in de eerste plaats de stratigrafische en lithologische kenmerken maar ook de antropgene en geotechnische lagen komen aan bod.  </p>
 <p>RuimtelijkeBereiken laten toe de variatie van deze lagen in de diepte beschrijven met per laag de kenmerken zoals grondsoort, geologische formatie, watervoering etc. Deze kenmerken worden doorgaans gecodeerd doorgegeven.  </p>
-<p>Het betreft hier observaties vh type Interpretatie omdat het doorgaans over persoonlijke oordelen betreft, weliswaar beredeneerd en gebaseerd op theoretische kennis of op de verwerking van andere ruwe observaties.  </p>
+<p>Het betreft hier observaties vh type Interpretatie omdat het doorgaans persoonlijke oordelen betreft, weliswaar beredeneerd en gebaseerd op theoretische kennis of op de verwerking van andere ruwe observaties.  </p>
 {% endblock %}
