--- a/templates/bo-observaties-voc.j2
+++ b/templates/bo-observaties-voc.j2
@@ -2,9 +2,9 @@
 
 {% block summary %}
 <p>Het vocabularium OSLO Bodem & Ondergrond Observaties omvat termen om meer gespecialiseerde Observaties mbt Bodem en Ondergrond te beschrijven. </p>
-<p>Het gaat om Observaties die niet generiek kunnen beschreven worden met de termen uit het vocabularium OSLO Sensoren en Bemonstering. </p>
+<p>Het gaat om Observaties die niet generiek kunnen beschreven worden met de termen uit het vocabularium <a href="https://data.vlaanderen.be/ns/sensoren-en-bemonstering/">OSLO Sensoren en Bemonstering.</a> </p>
 <p>De Observaties waarover het hier gaat zijn analyses die doorgaans in een labo plaatsvinden met gespecialiseerde apparatuur mn het bepalen van de Korrelverdeling of van geotechnische kenmerken van Grondmonsters zoals Samendrukbaarheid, Doorlaatbaarheid of Schuifweerstand. </p>
 <p>Het betreft veelal specialisaties van Meetreeksen, dwz dat het resultaat varieert in functie van een andere parameter zoals belasting, druk of korrelgrootte. </p>
 <p>Ook is een term voorzien voor Boorgatmetingen. </p>
-<p>Terminologie voor de Grondmonsters waarop de analyses zich baseren moet gezocht worden in het vocabularium Grondboringen. </p>
+<p>Terminologie voor de Grondmonsters waarop de analyses zich baseren moet gezocht worden in het vocabularium <a href="https://data.vlaanderen.be/ns/grondboringen/">OSLO Grondboringen.</a> </p>
 {% endblock %}
