--- a/templates/ruimtelijke-bereiken-ap.j2
+++ b/templates/ruimtelijke-bereiken-ap.j2
@@ -6,7 +6,7 @@
 <p>Dat resultaat is een verzameling geometrie-waarde paren, bvb een reeks puntlocaties waarvoor de temperatuur is bepaald.</p>
 <p>In dat opzicht is een RuimtelijkBereik een specialisatie van een meetreeks, ttz een reeks metingen die de variatie x=f(y) voorstelt, ttz fenomeen x dat varieert in functie van een fenomeen y.</p>
 <p>In het voorbeeld van temperatuur zou dat bvb de temperatuur in functie van de luchtdruk kunnen zijn, maar ihkv het AP Ruimtelijke Bereiken gaat het over het variatie van x in functie van zijn ligging, dus temperatuur in functie van de positie.</p>
-<p>We baseren dit model op <a href="https://www.iso.org/standard/40121.html">ISO 19103</a< Geographic information — Schema for coverage geometry and functions.</p>
+<p>We baseren dit model op <a href="https://www.iso.org/standard/40121.html">ISO 19103</a> Geographic information — Schema for coverage geometry and functions.</p>
 <p>Daarin wordt Geometrie ruim gezien, het kan niet enkel gaan over een positie in de ruimte maar ook over een positie in de tijd (tijdreeks).</p>
 <p>We beperken ons hier tot ruimtelijke Geometrie en bovendien werkten we enkel het geval van PuntBereiken en CurveBereiken uit.</p>
 <p>Ook worden enkel DiscreteBereiken gemodelleerd, ttz een bereik waarvoor de waarden enkel gekend zijn voor een eindige set van punten of curves, niet voor elk punt in het beschouwde gebied bvb dmv interpolatie.</p>
