--- a/templates/ruimtelijke-bereiken-ap.j2
+++ b/templates/ruimtelijke-bereiken-ap.j2
@@ -1,7 +1,7 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Ruimtelijke Bereiken toont hoe met termen uit het overeenkomstig vocabularium de geografische spreiding van een fenomeen kan worden beschreven.</p>
+<p>Het applicatieprofiel Ruimtelijke Bereiken toont hoe met termen uit het overeenkomstig <a href="https://data.vlaanderen.be/ns/ruimtelijke-bereiken/">vocabularium</a> de geografische spreiding van een fenomeen kan worden beschreven.</p>
 <p>Eerder dan een set van individuele resultaten van individuele observaties, wordt een dergelijke spreiding beschreven als zijnde het resultaat van één enkele observatie.</p>
 <p>Dat resultaat is een verzameling geometrie-waarde paren, bvb een reeks puntlocaties waarvoor de temperatuur is bepaald.</p>
 <p>In dat opzicht is een RuimtelijkBereik een specialisatie van een meetreeks, ttz een reeks metingen die de variatie x=f(y) voorstelt, ttz fenomeen x dat varieert in functie van een fenomeen y.</p>
