--- a/templates/ruimtelijke-bereiken-ap.j2
+++ b/templates/ruimtelijke-bereiken-ap.j2
@@ -2,14 +2,15 @@
 
 {% block summary %}
 <p>Het applicatieprofiel Ruimtelijke Bereiken toont hoe met termen uit het overeenkomstig <a href="https://data.vlaanderen.be/ns/ruimtelijke-bereiken/">vocabularium</a> de geografische spreiding van een fenomeen kan worden beschreven.</p>
-<p>Eerder dan een set van individuele resultaten van individuele observaties, wordt een dergelijke spreiding beschreven als zijnde het resultaat van één enkele observatie.</p>
-<p>Dat resultaat is een verzameling geometrie-waarde paren, bvb een reeks puntlocaties waarvoor de temperatuur is bepaald.</p>
-<p>In dat opzicht is een RuimtelijkBereik een specialisatie van een meetreeks, ttz een reeks metingen die de variatie x=f(y) voorstelt, ttz fenomeen x dat varieert in functie van een fenomeen y.</p>
-<p>In het voorbeeld van temperatuur zou dat bvb de temperatuur in functie van de luchtdruk kunnen zijn, maar ihkv het AP Ruimtelijke Bereiken gaat het over het variatie van x in functie van zijn ligging, dus temperatuur in functie van de positie.</p>
+<p>Niet elk fenomeen levert een constante als waarde op (bvb kleur), het kan ook variëren in functie van een andere parameter (bvb de lengte ve treinspoor in functie vd temperatuur).</p>
+<p>Bij variatie in ruimte of tijd spreken we van een Bereik.</p>
 <p>We baseren dit model op <a href="https://www.iso.org/standard/40121.html">ISO 19103</a> Geographic information — Schema for coverage geometry and functions.</p>
 <p>Daarin wordt Geometrie ruim gezien, het kan niet enkel gaan over een positie in de ruimte maar ook over een positie in de tijd (tijdreeks).</p>
 <p>We beperken ons hier tot ruimtelijke Geometrie en bovendien werkten we enkel het geval van PuntBereiken en CurveBereiken uit.</p>
-<p>Ook worden enkel DiscreteBereiken gemodelleerd, ttz een bereik waarvoor de waarden enkel gekend zijn voor een eindige set van punten of curves, niet voor elk punt in het beschouwde gebied bvb dmv interpolatie.</p>
-<p>Centrale klassen zijn DiscreetPuntBereik en DiscreetCurveBereik met resp bijhorende datatypes PuntWaardepaar en CurveWaardepaar.</p>
-<p>De geometrie is dus Punt of Curve, de waarde is generiek gedefinieerd dmv de klasse Record en moet bij hergebruik verder worden gespecialiseerd. </p>
+<p>Ook modelleren we enkel DiscreteBereiken, ttz een bereik waarvoor de waarden enkel gekend zijn voor een eindige set van geometrieën en bvb niet voor elk punt in het beschouwde gebied zoals het geval bij een ContinueBereik.</p>
+<p>Bvb bij remote sensing wordt de variatie weergegeven voor een eindige set van pixels, waarbij de waarde , bvb de reflectiegraad, constant is binnen elke pixel.</p>
+<p>De set van geometriëen kan kunstmatig bepaald zijn zoals bij de pixels of bij sampling, maar ook natuurlijk zoals bij een gemeentelijke indeling.</p>
+<p>Merk op dat DiscreteBereiken in ContinueBereiken kunnen worden omgezet, de discrete punten vormen dan controlepunten bij interpolatie.</p>
+<p>DiscreetPuntBereik en DiscreetCurveBereik zijn de centrale klassen, met resp PuntWaardepaar en CurveWaardepaar als datatypes.</p>
+<p>De waarde in het GeometrieWaardepaar is generiek gedefinieerd dmv de klasse Record en moet bij hergebruik verder worden gespecialiseerd.</p> 
 {% endblock %}
