--- a/templates/bo-observaties-ap.j2
+++ b/templates/bo-observaties-ap.j2
@@ -5,7 +5,7 @@
 </p>Het applicatieprofiel bouwt oa verder op het applicatieprofiel <a href="https://data.vlaanderen.be/doc/applicatieprofiel/sensoren-en-bemonstering">OSLO Sensoren en Bemonstering</a>. </p>
 </p>Voor Observaties die generiek zijn, bvb deze van de zgn onderkenning (Grondsoort, Humusgehalte, Volumemassa etc) volstaan de klassen van Sensoren en Bemonstering. </p>
 </p>Dat is niet het geval voor de Observaties in dit applicatieprofiel die doorgaans in een labo plaatsvinden met gespecialiseerde apparatuur: het bepalen van de Korrelverdeling of van geotechnische kenmerken zoals de Doorlatendheid, Samendrukbaarheid of Schuifweerstand. </p>
-</p>Voor deze analyses zijn de nodige klassen en kenmerken voorzien, meestal specialisaties van de klasse Meetreeks omdat het resultaat varieert met een bepaalde parameter, bvb het aandeel van een bepaalde korreldiameter in een grondmonster of de vervorming  van een monster bij toenemende druk. </p>
-</p>De analyses hebben doorgaans betrekking op Grondmonsters, echter voor de beschrijving daarvan verwijzen we naar het applicatieprofiel Grondboringen. </p>
+</p>Voor deze analyses zijn de nodige klassen en kenmerken voorzien, soms specialisaties van de klasse Meetreeks omdat het resultaat varieert met een bepaalde parameter, bvb het aandeel van een bepaalde korreldiameter in een grondmonster. </p>
+</p>De analyses hebben doorgaans betrekking op Grondmonsters, echter voor de beschrijving van die klasse verwijzen we naar het applicatieprofiel Grondboringen. </p>
 </p>Het gaat in dit applicatieprofiel niet om Interpretaties, ttz Observaties die een beredeneerd persoonlijk oordeel inhouden, die worden behandeld in het applicatieprofiel <a href="https://data.vlaanderen.be/doc/applicatieprofiel/bodem-en-ondergrond/interpretaties">OSLO Bodem en Ondergrond Interpretaties</a>. </p>
 {% endblock %}
