--- a/templates/bodem-en-ondergrond-voc.j2
+++ b/templates/bodem-en-ondergrond-voc.j2
@@ -5,6 +5,6 @@
 <p>De termen zijn generiek generiek genoeg om bruikbaar te zijn voor meerdere deeldomeinen binnen Bodem & Ondergrond.</p>
 <p>Het gaat over termen zoals Diepte, Maaiveld of een uitbreiding van Profiel uit Observaties en Metingen met Profielelement en Laag als specialisatie daarvan.</p>
 <p>Ook Meetreeks en Fractiemeting als specialisatie daarvan zijn toegevoegd als aanvulling op DiscreteBereiken uit Observaties en Metingen. Deze laatste beperken zich tot variaties van een fenomeen in tijd en ruimte terwijl in dit domein ook variaties in functie van andere parameters beschreven moeten kunnen worden.</p>
-<p>ook enkele utilitaire klassen zijn toegevoegd zoals opdracht en Erkenning.</p>
+<p>Ook enkele utilitaire klassen zijn toegevoegd zoals Opdracht en Erkenning.</p>
 <p>Naast Bereiken die variaties van fenomenen in ruimte en tijd kunnen documenteren was er in het domein Bodem en Ondergrond ook behoefte aan “gewone” meetreeksen, waar het fenomeen functie kan zijn van een willekeurige parameter. Om die reden voegden we Meetreeksen toe en de veelgebruikte specialisatie Fractiemetingen.</p>
 {% endblock %}
